Thu Jul  6 13:01:34 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/main-window.c:
	* src/fe-gnome/fe-gnome.c:
	  - Pop up the connect dialog on startup if there are no servers set
	    to auto-connect. (#345967)

Wed Jul  5 10:28:42 MDT 2006  Christian Persch <chpe@gnome.org>

	* src/fe-gnome/topic-label.c:
	  - Change TopicLabel to use gobject's private mechanism, and fix a
	    memory leak. (#346637)

Sun Jul  2 17:17:52 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* data/xchat-gnome.glade:
	  - Change spacing and packing around a bit to get the scrollbar flush
	    with the right of the screen when maximized.  Things aren't
	    perfect yet, but it's better. (#346115)

Sun Jul  2 13:31:10 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* plugins/url_scraper/Makefile.am:
	* plugins/notification/Makefile.am:
	* plugins/dbus/Makefile.am:
	* src/fe-gnome/Makefile.am:
	* data/Makefile.am:
	  - Make it build correctly after make clean by moving things to
	    DISTCLEANFILES. (#346265)

Sun Jul  2 12:58:20 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/preferences-page-networks.c:
	* src/fe-gnome/irc-network-editor.c:
	  - Make network settings dialog non-modal. (#346188)

Sun Jul  2 11:25:21 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/irc-network.c:
	  - Add TIS-620 character set. (#346396)

Thu Jun 29 15:10:22 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* plugins/notify-osd/notify-osd.c:
	  - Always escape message. (#346132)

Thu Jun 29 11:02:22 BST 2006  Daniel Drake <dsd@gentoo.org>

	* src/fe-gnome/dcc-window.c:
	  - Fix DCC stop crasher and timeout handling bug.

Sun Jun 25 11:22:27 CEST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/main-window.c:
	* src/fe-gnome/navigation-tree.c:
	* data/xchat-gnome-ui.xml:
	  - Show a different context menu for channels in the navigation tree
	    based on whether or not the channel is joined.  This allows users